--- a/views/addTask.html
+++ b/views/addTask.html
@@ -8,6 +8,7 @@
         <a href="/listAllTasks">List All Tasks </a>&nbsp;
         <a href="/updateTask">Update Task Status </a>&nbsp;
         <a href="/deleteTask">Delete Task </a>&nbsp;
+        <a href="/deleteByDate">Delete Task By Date </a>&nbsp;
         <a href="/deleteCompleted">Delete Completed Tasks </a></br></br>
 
         <form action="/taskAdded" method="POST">
