--- a/views/listTasks.html
+++ b/views/listTasks.html
@@ -13,6 +13,7 @@
         <a href="/addNewTask">Add New Task </a> &nbsp;
         <a href="/updateTask">Update Task Status </a>&nbsp;
         <a href="/deleteTask">Delete Task </a>&nbsp;
+        <a href="/deleteByDate">Delete Task By Date </a>&nbsp;
         <a href="/deleteCompleted">Delete Completed Tasks </a>
     </h1></br></br>
     <table>
