--- a/views/updateTask.html
+++ b/views/updateTask.html
@@ -8,6 +8,7 @@
         <a href="/addNewTask">Add New Task </a> &nbsp;
         <a href="/listAllTasks">List All Tasks </a>&nbsp;
         <a href="/deleteTask">Delete Task </a>&nbsp;
+        <a href="/deleteByDate">Delete Task By Date </a>&nbsp;
         <a href="/deleteCompleted">Delete Completed Tasks </a></br>
     </h1>
     <body>
